<resources>
    <string name="app_name">KNC</string>
    <string name="products">Products</string>
    <string name="everyday_you_become_one_step_closer_to_nyour_goal_don_t_give_up">Everyday you become one step closer to\nyour goal. Don\'t give up!</string>
    <string name="track_nyour_product_nreport">Track \nYour Product \nReport</string>
    <string name="language">Language</string>
    <string name="stay_together_nand_strong">Stay Together\nand Strong</string>
    <string name="find_friends_to_discuss_common_topics_ncomplete_challenge_together">Find friends to discuss common topics.\nComplete challenge together.</string>
    <string name="continueLogin">Continue with Login</string>
    <string name="by_continuing_you_agree_terms_of_services_privacy_policy"><![CDATA[By continuing you agree Terms of Services & Privacy policy]]></string>
    <string name="get_connected">Get Connected</string>
    <string name="login">Login</string>
    <string name="_91">+91</string>
    <string name="add">Add</string>
    <string name="carpenter">Carpenter</string>
    <string name="business_dealer">Business Dealer</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="my_loyalty">My Loyalty</string>
    <string name="current_campaign">Current Campaign</string>
    <string name="what_s_new">What\'s New</string>
    <string name="knc_products">KNC Products</string>
    <string name="loyalty_scheme">Loyalty Scheme</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="registerDealer">Register Dealer</string>
    <string name="registerCarpenter">Register Carpenter</string>
    <string name="details">Details</string>
    <string name="business_details">Business Details</string>
    <string name="businessName">Business Name*</string>
    <string name="name">Name*</string>
    <string name="email">Email</string>
    <string name="password">Password*</string>
    <string name="submit">Submit</string>
    <string name="no_internet_connection">No Internet Connection!! Retry</string>
    <string name="your_number">Your number*</string>
    <string name="select_your_language">Select your language</string>
    <string name="invalid_mobile_number">Invalid Mobile number</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="invalid_password_min_4_char">Invalid password (Min 4 char)</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="greeting">Hi,</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_business_name">Please enter business name</string>
    <string name="dealers">Dealers</string>
    <string name="oops">Oops!!</string>
    <string name="dealerNotFound">Sorry we couldn\'t find any dealer</string>
    <string name="addDealer">Add Dealer</string>
    <string name="uploadGovtId">Any Govt. Id* (like Aadhar,Pancard)</string>
    <string name="please_upload_any_government_id_like_aadhar_pancard_voterid">Please upload any government Id (like aadhar,PanCard,voterId)</string>
    <string name="status">Status :</string>
    <string name="carpenters">Carpenters</string>
    <string name="carpenterNotFound">Sorry we couldn\'t find any carpenter</string>
    <string name="addCarpenter">Add Carpenter</string>
    <string name="retry">Retry</string>
    <string name="term_conditions"><![CDATA[Term & conditions]]></string>
    <string name="my_profile">My Profile</string>
    <string name="customer_support">Customer Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_your_friend">Invite your friend</string>
    <string name="my_connections">My Connections</string>
    <string name="name_">Name :</string>
    <string name="employee_id">Employee ID :</string>
    <string name="email_">Email :</string>
    <string name="mobile">Mobile :</string>
    <string name="role">Role :</string>
    <string name="contact_us">Contact Us:</string>
    <string name="logout">LogOut</string>
    <string name="there_are_no_map_client_installed_on_your_device">There are no Map client installed on your device.</string>
    <string name="change_language">Change language</string>
</resources>