<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".Activities.IntroActivity">


        <LinearLayout
            android:id="@+id/llProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/StyleRegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/products"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rvProducts"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/layout_intro_product_item" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llProducts"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/StyleBoldFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_nyour_product_nreport"
                android:textColor="@color/white"
                android:textSize="38sp" />

            <TextView
                android:text="@string/everyday_you_become_one_step_closer_to_nyour_goal_don_t_give_up"
                android:layout_width="wrap_content"
                android:textColor="@color/color_grey_80"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>