<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginUser"
            type="com.application.knc.model.UserData" />

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".Activities.Profile.ProfileActivity">

        <include
            android:id="@+id/inclTitleBar"
            layout="@layout/layout_common_title_bar"
            android:title="@{@string/my_profile}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingTop="25dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/color_theme_10"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:netImageSrc="@{loginUser.profile_image_url}" />
                </com.google.android.material.card.MaterialCardView>




                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="55dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_height="match_parent">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/employee_id"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                style="@style/StyleMediumFont"
                                android:text="@{loginUser.employee_id}"
                                android:layout_height="wrap_content"/>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/name_"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                style="@style/StyleMediumFont"
                                android:text="@{loginUser.name}"
                                android:layout_height="wrap_content"/>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:visibility='@{loginUser.email!=null &amp;&amp;  !loginUser.email.equals("")?View.VISIBLE:View.GONE}'
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/email_"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                style="@style/StyleMediumFont"
                                android:text="@{loginUser.email}"
                                android:layout_height="wrap_content"/>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/mobile"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                style="@style/StyleMediumFont"
                                android:text='@{""+loginUser.mobile}'
                                android:layout_height="wrap_content"/>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/role"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                style="@style/StyleMediumFont"
                                android:text="@{loginUser.role}"
                                android:layout_height="wrap_content"/>


                        </LinearLayout>



                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>



                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardElevation="0dp"
                    android:id="@+id/cvLogout"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/logout"
                            android:drawablePadding="10dp"
                            android:textColor="@color/color_theme_100"
                            style="@style/StyleBoldFont"
                            android:layout_height="wrap_content"
                            app:drawableStartCompat="@drawable/svg_logout" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>