<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_theme"
    tools:context=".Activities.LanguageSelectionActivity">



    <include
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:id="@+id/cbLanguage"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:btnText="@{@string/language}"
        app:btnTextColor="@{@color/color_black_90}"
        app:btnColor="@{@color/black}"
        app:btnIcon="@{@drawable/svg_swap}"
        layout="@layout/layout_custom_btn"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/clConnections"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbLanguage"
        android:layout_height="260dp">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:src="@drawable/svg_waves"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:src="@drawable/svg_bg_dots"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="4"
            android:id="@+id/rvConnection"
            tools:listitem="@layout/layout_connection_upper_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                android:paddingHorizontal="25dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/get_connected"
                    android:textAllCaps="true"
                    style="@style/StyleMediumFont"
                    android:textColor="@color/color_grey_90"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="22"
                    android:textSize="18sp"
                    style="@style/StyleBoldFont"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/clConnections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/StyleBoldFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_together_nand_strong"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <TextView
            android:text="@string/find_friends_to_discuss_common_topics_ncomplete_challenge_together"
            android:layout_width="wrap_content"
            android:textColor="@color/color_grey_80"
            android:layout_height="wrap_content"/>


        <include
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:id="@+id/inclContinue"
            android:layout_height="wrap_content"
            app:btnText="@{@string/continueLogin}"
            app:btnTextColor="@{@color/color_black_90}"
            app:btnColor="@{@color/black}"
            app:btnIcon="@{@drawable/svg_add_user}"
            layout="@layout/layout_custom_btn"/>

        <TextView
            android:text="@string/by_continuing_you_agree_terms_of_services_privacy_policy"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textColor="@color/color_grey_80"
            android:layout_height="wrap_content"/>




    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>